# JetBrainsRunner

./: .gitignore  .gitmodules  CMakeLists.txt  JetbrainsRunner.kdev4  Messages.sh  README  README.md  install-user.sh  install.sh  postrm  uninstall.sh
.github/workflows/: ci.yaml
.kdev4/: JetbrainsRunner.kdev4
autotests/: CMakeLists.txt  jetbrainsrunnerintegrationtest.cpp
autotests/data/: jetbrains-phpstorm.desktop  recentProjects.xml
src/: CMakeLists.txt  ConfigKeys.h  JetbrainsApplication.cpp  JetbrainsApplication.h  SettingsDirectory.cpp  SettingsDirectory.h  jetbrainsrunner.cpp  jetbrainsrunner.h  jetbrainsrunner.json.in  plasma-runner-jetbrainsrunner.desktop  plasma-runner-jetbrainsrunner.desktop.in  version.h
src/config/: jetbrainsrunner_config.cpp  jetbrainsrunner_config.h  jetbrainsrunner_config.ui  jetbrainsrunner_config_mapping_item.h  jetbrainsrunner_config_mapping_item.ui  plasma-runner-jetbrainsrunner_config.desktop
